syntax = "proto3";
package movie;
option go_package = "/model";

message FetchMovieReq {
    string searchword = 1;
    string pagination = 2;
}

message FetchMovieResponse{
    message Data{
        string title = 1;
        string year = 2;
        string imdbID = 3;
        string type = 4;
        string poster = 5;
    }
    repeated Data search = 1;
}

message DetailMovieReq{
    string title = 1;
    string movieId = 2;
}

message Error{
    string Response = 1;
    string Error = 2;
}

message DetailMovieResponse{
    string title = 1;
    string year = 2;
    string rated = 3;
    string released = 4;
    string runtime = 5;
    string genre = 6;
    string director = 7;
    string writer = 8;
    string actors = 9;
    string plot = 10;
    string language = 11;
    string country = 12;
    string awards = 13;
    string poster = 14;
    message Rating{
        string source = 1;
        string value = 2;
    }
    repeated Rating ratings = 15;
    string metascore = 16;
    string imdbRating = 17;
    string imdbVotes = 18;
    string imdbID = 19;
    string type = 20;
    string DVD = 21;
    string BoxOffice = 22;
    string Production = 23;
    string Website = 24;
    string Response = 25;
    string Error = 26;
}
service MoviesService{
    rpc FetchMovie(FetchMovieReq) returns(FetchMovieResponse){}
    rpc DetailMovie(DetailMovieReq) returns(DetailMovieResponse){}
}